--- a/Project/Project/Project.vcxproj.filters
+++ b/Project/Project/Project.vcxproj.filters
@@ -13,6 +13,9 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Shaders">
+      <UniqueIdentifier>{ec5dda36-e9dc-4bf2-b8b9-1628f855e72e}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Application.cpp">
@@ -48,6 +51,12 @@
     <ClCompile Include="Model.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="MyCylinder.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Cylinder.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Shader.h">
@@ -77,9 +86,37 @@
     <ClInclude Include="Model.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="MyCylinder.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Cylinder.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <None Include="fragShad.frag" />
-    <None Include="vertShad.vert" />
+    <None Include="Shaders\Cylinder.frag">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="Shaders\Cylinder.vert">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="Shaders\Fragment.frag">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="Shaders\Mix.frag">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="Shaders\Mix.vert">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="Shaders\Simple.frag">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="Shaders\Simple.vert">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="Shaders\Vertex.vert">
+      <Filter>Shaders</Filter>
+    </None>
   </ItemGroup>
 </Project>
